--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -9,6 +9,13 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        path:
+          - lambda
+          - rds/db_instance
+          - vpc
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -19,7 +26,9 @@ jobs:
           terraform_version: 1.1.6
 
       - name: Run terraform fmt check
-        run: terraform fmt -check -diff -recursive ./terraform
+        run: run: |
+          cd ${{ matrix.path }}
+          terraform fmt -check -diff -recursive ./terraform
 
   plan:
     name: Plan
