--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -26,7 +26,7 @@ jobs:
           terraform_version: 1.1.6
 
       - name: Run terraform fmt check
-        run: run: |
+        run: |
           cd ${{ matrix.path }}
           terraform fmt -check -diff -recursive ./terraform
 
