Move RDS files up a directory

--- a/.github/workflows/plan-on-pr.yml
+++ b/.github/workflows/plan-on-pr.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         path:
           - lambda
-          - rds/db_instance
+          - rds
           - vpc
     steps:
       - name: Check out code
@@ -40,7 +40,7 @@ jobs:
       matrix:
         path:
           - lambda
-          - rds/db_instance
+          - rds
           - vpc
 
     steps:
