Add security_group module to documentation generation

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,6 +13,7 @@ jobs:
           - lambda
           - rds
           - vpc
+          - security_group
     steps:
     - uses: actions/checkout@v2
       with:
